# RealTimeLogViewer

./: CMakeLists.txt  Screencast from 2024-12-02 22-57-44.webm
log_generator/: log_generator  log_generator.cpp
src/: CaptureCommand.cpp  CaptureCommand.h  FileWatcher.cpp  FileWatcher.h  FilterDecorator.cpp  FilterDecorator.h  LogFacade.cpp  LogFacade.h  LogViewer.cpp  LogViewer.h  LogViewer.ui  main.cpp
